header and biography section complet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!--START HEADER SECTION-->
+    <header id="header">
+        <section>
+            <div class="container">
+                <div class="half_width margin_top">
+                    <h2>Hello I'm</h2>
+                    <h1>Mohammad Arif Hossain</h1>
+                    <p>I'm a web designer / developer based in Bangladesh. I have a passion for web design and love to create for web.I like to keep it simple.</p>
+                    <a target="_blank" href="https://www.linkedin.com/in/md-arif-hossain-3891681b1/">hire me</a>
+                </div>
+                <div class="half_width margin_left">
+                    <img src="images/peter.png" alt="Peter">
+                </div>
+            </div>
+        </section>
+    </header>
+    <!--END HEADER SECTION-->
+
+    <!--START BIOGRAPHY SECTION-->
+    <section class="container biography_bg">
+        <div class="half_width">
+            <img src="images/peter_dream.png" alt="Peter">
+        </div>
+        <div class="half_width margin_top ">
+            <h2>Biography</h2>
+            <p>My goals are to focus on typography, content and conveying the message that you want to send.I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+            <a target="_blank" href="https://www.linkedin.com/in/md-arif-hossain-3891681b1/">Download cv</a>
+        </div>
+    </section>
+    <!--END BIOGRAPHY SECTION-->
 </body>
 </html>
