my personal website full complet

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!--START HEADER SECTION-->
     <header id="header">
-        <section>
+        <div class="cotainer_full">
             <div class="container">
                 <div class="half_width margin_top">
                     <h2>Hello I'm</h2>
@@ -21,21 +21,57 @@
                     <img src="images/peter.png" alt="Peter">
                 </div>
             </div>
-        </section>
+        </div>
     </header>
     <!--END HEADER SECTION-->
 
     <!--START BIOGRAPHY SECTION-->
-    <section class="container biography_bg">
-        <div class="half_width">
-            <img src="images/peter_dream.png" alt="Peter">
+    <div class="container_full biography_bg">
+        <div class="container ">
+            <div class="half_width">
+                <img src="images/peter_dream.png" alt="Peter">
+            </div>
+            <div class="half_width margin_top ">
+                <h2>Biography</h2>
+                <p>My goals are to focus on typography, content and conveying the message that you want to send.I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+                <a target="_blank" href="https://www.linkedin.com/in/md-arif-hossain-3891681b1/">Download cv</a>
+            </div>
         </div>
-        <div class="half_width margin_top ">
-            <h2>Biography</h2>
-            <p>My goals are to focus on typography, content and conveying the message that you want to send.I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
-            <a target="_blank" href="https://www.linkedin.com/in/md-arif-hossain-3891681b1/">Download cv</a>
-        </div>
-    </section>
+    </div>
     <!--END BIOGRAPHY SECTION-->
+
+    <!--START LATEST WORK SECTION-->
+    <div class="container_full latest_work_bg">
+        <div class="container">
+            <h2 class="special">My Latest Work</h2>
+            <div class="img1 sampal_img">
+                <img src="images/latest-work/work-1.png" alt="">
+            </div>
+            <div class="img2 sampal_img">
+                <img src="images/latest-work/work-2.jpg" alt="">
+            </div>
+            <div class="img3 sampal_img">
+                <img src="images/latest-work/work-3.jpg" alt="">
+            </div>
+        </div>
+    </div>
+    <!--END LATEST WORK  SECTION-->
+
+    <!--START FOOTER SECTION-->
+    <footer>
+        <div class="container_full footer_bg">
+            <div class="container">
+                <div class="clint_say">
+                    <h2>What Clint are say</h2>
+                    <h3>Bruce Moccy</h3>
+                    <p>Founder & CEO Alies</p>
+                    <p> <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, officiis!</q> </p>
+                    <a target="_blank" href="#">Lave me a massage in the <span class="email">programming.hero1@gmail.com</span> </a>
+                </div>
+                <P id="special">Programming Hero initiative. &copy; 2020 ALL rights Reserved.</P>
+            </div>
+        </div>
+    </footer>
+    <!--END FOOTER SECTION-->
 </body>
 </html>
