--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                     <h3>Bruce Moccy</h3>
                     <p>Founder & CEO Alies</p>
                     <p> <q>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, officiis!</q> </p>
-                    <a target="_blank" href="#">Lave me a massage in the <span class="email">programming.hero1@gmail.com</span> </a>
+                    <a target="_blank" href="#">Lave me a massage in the <span class="email">a1barif2h@gmail.com</span> </a>
                 </div>
-                <P id="special">Programming Hero initiative. &copy; 2020 ALL rights Reserved.</P>
+                <P id="special">Programming Hero-md-arif-hossain initiative. &copy; 2020 ALL rights Reserved.</P>
             </div>
         </div>
     </footer>
